--- a/myapp/views/admin.hbs
+++ b/myapp/views/admin.hbs
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #121212;
+      background-color: #272727;
       color: #ffffff;
     }
 
@@ -93,7 +93,7 @@
     <!-- The sidebar -->
     <div class="sidebar">
       <h2 class="h1 text-light">Admin init()</h2>
-      <a class="active" href="#event-management">Dashboard</a>
+      <a class="active" href="/admin">Dashboard</a>
       <a href="#event-management">Event Management</a>
       <a href="#member-management">Member Management</a>
       <a href="#user-feedbacks">User Feedbacks</a>
