--- a/myapp/views/admin.hbs
+++ b/myapp/views/admin.hbs
@@ -92,11 +92,10 @@
 
     <!-- The sidebar -->
     <div class="sidebar">
-      <h2 class="h1 text-light">Admin init()</h2>
       <a class="active" href="/admin">Dashboard</a>
-      <a href="#event-management">Event Management</a>
-      <a href="#member-management">Member Management</a>
-      <a href="#user-feedbacks">User Feedbacks</a>
+      <a href="/admin/eventManagement">Event Management</a>
+      <a href="/admin/memberManagement">Member Management</a>
+      <a href="/admin/userFeedbacks">User Feedbacks</a>
     </div>
 
     <div class="content">
