--- a/myapp/views/members.hbs
+++ b/myapp/views/members.hbs
@@ -28,7 +28,7 @@
             /* Aligns with the right side of the viewport */
             height: 100vh;
             /* Ensures it takes the full height of the viewport */
-            width: 75%;
+            width:100%;
             /* Adjust the width as needed */
             padding: 0;
             /* Remove any default padding */
@@ -40,6 +40,7 @@
             flex-direction: column;
             align-items: center;
             font-size: 1.5rem;
+            z-index: 9999;
         }
 
         #mobileNav a:hover {
@@ -76,7 +77,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
         /* General styling */
-     
+
 
         /* Navbar scroll effect */
         nav.scrolled {
@@ -298,6 +299,19 @@
             margin-top: 20px;
 
         }
+
+        /* Fade-in effect */
+        .fade-in {
+            opacity: 0;
+            transform: translateY(20px);
+            /* Adjust based on your needs */
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+        }
+
+        .visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
         integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
@@ -306,46 +320,48 @@
 
 <body class="bg-white dark:bg-gray-900">
     <nav class="w-full bg-transparent h-fit overflow-hidden fixed top-0 left-0 z-50">
-<div class="py-4 lg:px-8 px-4 max-w-[4120px] h-16 mx-auto text-white flex items-center justify-between">
+        <div class="py-4 lg:px-8 px-4 max-w-[4120px] h-16 mx-auto text-white flex items-center justify-between">
             <div class="lg:w-1/2">
-            <a href="/" class="lg:text-2xl text-xl uppercase tracking-wider cursor-pointer font-bold">
+                <a href="/" class="lg:text-2xl text-xl uppercase tracking-wider cursor-pointer font-bold">
                     <img src="/images/logo.jpg" alt="Company Logo" class="h-12 object-contain">
                 </a>
-        </div>
-<div class="hidden lg:flex lg:items-center lg:justify-end lg:flex-1 lg:gap-8 uppercase tracking-wider cursor-pointer text-lg" id="navItems">
+            </div>
+            <div class="hidden lg:flex lg:items-center lg:justify-end lg:flex-1 lg:gap-8 uppercase tracking-wider cursor-pointer text-lg"
+                id="navItems">
                 <a href="/events" class="group">
-                EVENTS
-                <div class="w-0 group-hover:w-full h-0.5 bg-white ease-in-out duration-500"></div>
-            </a>
-            <a href="/members" class="group">
-                MEMBERS
-                <div class="w-0 group-hover:w-full h-0.5 bg-white ease-in-out duration-500"></div>
-            </a>
-            <a href="/contactus" class="group">
-                CONTACT
-                <div class="w-0 group-hover:w-full h-0.5 bg-white ease-in-out duration-500"></div>
-            </a>
-            <a href="/about" class="group">
-                ABOUT US
-                <div class="w-0 group-hover:w-full h-0.5 bg-white ease-in-out duration-500"></div>
-            </a>
+                    EVENTS
+                    <div class="w-0 group-hover:w-full h-0.5 bg-white ease-in-out duration-500"></div>
+                </a>
+                <a href="/members" class="group">
+                    MEMBERS
+                    <div class="w-0 group-hover:w-full h-0.5 bg-white ease-in-out duration-500"></div>
+                </a>
+                <a href="/contactus" class="group">
+                    CONTACT
+                    <div class="w-0 group-hover:w-full h-0.5 bg-white ease-in-out duration-500"></div>
+                </a>
+                <a href="/about" class="group">
+                    ABOUT US
+                    <div class="w-0 group-hover:w-full h-0.5 bg-white ease-in-out duration-500"></div>
+                </a>
+            </div>
+            <button id="hamburger" class="lg:hidden text-white text-2xl focus:outline-none">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
-        <button id="hamburger" class="lg:hidden text-white text-2xl focus:outline-none">
-            <i class="fas fa-bars"></i>
-        </button>
-    </div>
-    <div id="mobileNav" class="fixed inset-0 top-16 left-[-100%] w-[100%] bg-gray-800 text-white flex flex-col items-center gap-6 pt-16 px-4 transition-transform duration-300 ease-in-out">
-        <button class="self-end text-2xl" id="closeMobileNav">
-            <i class="fas fa-times"></i>
-        </button>
-        <a href="/events">EVENTS</a>
-        <a href="/members">MEMBERS</a>
-        <a href="/contactus">CONTACT</a>
-        <a href="/about">ABOUT US</a>
-    </div>
-</nav>
+        <div id="mobileNav"
+            class="fixed inset-0 top-16 left-[-100%] w-[100%] bg-gray-800 text-white flex flex-col items-center gap-6 pt-16 px-4 transition-transform duration-300 ease-in-out">
+            <button class="self-end text-2xl" id="closeMobileNav">
+                <i class="fas fa-times"></i>
+            </button>
+            <a href="/events">EVENTS</a>
+            <a href="/members">MEMBERS</a>
+            <a href="/contactus">CONTACT</a>
+            <a href="/about">ABOUT US</a>
+        </div>
+    </nav>
 
-    <section class="bg-white dark:bg-gray-900">
+    <section class="bg-white dark:bg-gray-900 mt-8 fade-in">
         <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-6">
             <div class="mx-auto mb-8 max-w-screen-sm lg:mb-16">
                 <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Our team</h2>
@@ -354,6 +370,7 @@
             </div>
             <div class="grid gap-8 lg:gap-16 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
                 {{#each members}}
+                {{#if this.active}}
                 <div class="text-center text-gray-500 dark:text-gray-400">
                     <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="/memberImage/{{this._id}}"
                         alt="Bonnie Avatar">
@@ -363,7 +380,8 @@
                     <p>{{this.designation}}</p>
                     <ul class="flex justify-center mt-4 space-x-4">
                         <li>
-                            <a href="{{this.instagramLink}}" class="text-[#E4405F] hover:text-gray-900 dark:hover:text-white">
+                            <a href="{{this.instagramLink}}"
+                                class="text-[#E4405F] hover:text-gray-900 dark:hover:text-white">
                                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                     <path fill-rule="evenodd"
                                         d="M12 2.163c3.204 0 3.584.012 4.849.07 1.366.062 2.633.325 3.608 1.3.975.975 1.237 2.242 1.299 3.608.058 1.265.07 1.645.07 4.849s-.012 3.584-.07 4.849c-.062 1.366-.325 2.633-1.3 3.608-.975.975-2.242 1.237-3.608 1.299-1.265.058-1.645.07-4.849.07s-3.584-.012-4.849-.07c-1.366-.062-2.633-.325-3.608-1.3-.975-.975-1.237-2.242-1.299-3.608C2.175 15.747 2.163 15.367 2.163 12s.012-3.584.07-4.849c.062-1.366.325-2.633 1.3-3.608.975-.975 2.242-1.237 3.608-1.299 1.265-.058 1.645-.07 4.849-.07zm0-2.163C8.755 0 8.343.013 7.052.072 5.748.131 4.472.392 3.419 1.445 2.366 2.498 2.105 3.774 2.046 5.078c-.059 1.291-.072 1.703-.072 5.051s.013 3.759.072 5.051c.059 1.291.32 2.567 1.373 3.62 1.053 1.053 2.329 1.314 3.62 1.373 1.291.059 1.703.072 5.051.072s3.759-.013 5.051-.072c1.291-.059 2.567-.32 3.62-1.373 1.053-1.053 1.314-2.329 1.373-3.62.059-1.291.072-1.703.072-5.051s-.013-3.759-.072-5.051c-.059-1.291-.32-2.567-1.373-3.62C19.528.392 18.252.131 16.948.072 15.657.013 15.245 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.999 3.999 0 110-7.998 3.999 3.999 0 010 7.998zm6.406-11.845a1.44 1.44 0 11-2.88 0 1.44 1.44 0 012.88 0z"
@@ -373,7 +391,8 @@
                         </li>
 
                         <li>
-                            <a href="{{this.linkedinLink}}" class="text-[#0A66C2] hover:text-gray-900 dark:hover:text-white">
+                            <a href="{{this.linkedinLink}}"
+                                class="text-[#0A66C2] hover:text-gray-900 dark:hover:text-white">
                                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                     <path fill-rule="evenodd"
                                         d="M19.252 3C20.747 3 22 4.224 22 5.76V18.24C22 19.776 20.747 21 19.252 21H4.748C3.253 21 2 19.776 2 18.24V5.76C2 4.224 3.253 3 4.748 3h14.504zM7.052 9.167h-2.5V18h2.5V9.167zM5.802 8.163c-.858 0-1.547-.698-1.547-1.563 0-.864.689-1.563 1.547-1.563.859 0 1.548.698 1.548 1.563 0 .865-.689 1.563-1.548 1.563zm10.5 9.833h-2.5v-3.959c0-.99-.02-2.268-1.38-2.268-1.382 0-1.593 1.083-1.593 2.201v4.026h-2.5V9.167h2.4v1.205h.034c.334-.63 1.149-1.295 2.368-1.295 2.535 0 3.005 1.668 3.005 3.835V18h-.038z"
@@ -384,6 +403,55 @@
 
                     </ul>
                 </div>
+                {{/if}}
+                {{/each}}
+
+            </div>
+        </div>
+    </section>
+    <section class="bg-white dark:bg-gray-900 mt-8 fade-in">
+        <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-6">
+            <div class="mx-auto mb-8 max-w-screen-sm lg:mb-16">
+                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Past Members</h2>
+                <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">
+                    Our past members have played a crucial role in shaping our organization.</p></p>
+            </div>
+            <div class="grid gap-8 lg:gap-16 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+                {{#each members}}
+                {{#unless this.active}}
+                <div class="text-center text-gray-500 dark:text-gray-400">
+                    <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="/memberImage/{{this._id}}"
+                        alt="Bonnie Avatar">
+                    <h3 class="mb-1 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                        <a href="#">{{this.name}}</a>
+                    </h3>
+                    <p>{{this.designation}}</p>
+                    <ul class="flex justify-center mt-4 space-x-4">
+                        <li>
+                            <a href="{{this.instagramLink}}"
+                                class="text-[#E4405F] hover:text-gray-900 dark:hover:text-white">
+                                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                                    <path fill-rule="evenodd"
+                                        d="M12 2.163c3.204 0 3.584.012 4.849.07 1.366.062 2.633.325 3.608 1.3.975.975 1.237 2.242 1.299 3.608.058 1.265.07 1.645.07 4.849s-.012 3.584-.07 4.849c-.062 1.366-.325 2.633-1.3 3.608-.975.975-2.242 1.237-3.608 1.299-1.265.058-1.645.07-4.849.07s-3.584-.012-4.849-.07c-1.366-.062-2.633-.325-3.608-1.3-.975-.975-1.237-2.242-1.299-3.608C2.175 15.747 2.163 15.367 2.163 12s.012-3.584.07-4.849c.062-1.366.325-2.633 1.3-3.608.975-.975 2.242-1.237 3.608-1.299 1.265-.058 1.645-.07 4.849-.07zm0-2.163C8.755 0 8.343.013 7.052.072 5.748.131 4.472.392 3.419 1.445 2.366 2.498 2.105 3.774 2.046 5.078c-.059 1.291-.072 1.703-.072 5.051s.013 3.759.072 5.051c.059 1.291.32 2.567 1.373 3.62 1.053 1.053 2.329 1.314 3.62 1.373 1.291.059 1.703.072 5.051.072s3.759-.013 5.051-.072c1.291-.059 2.567-.32 3.62-1.373 1.053-1.053 1.314-2.329 1.373-3.62.059-1.291.072-1.703.072-5.051s-.013-3.759-.072-5.051c-.059-1.291-.32-2.567-1.373-3.62C19.528.392 18.252.131 16.948.072 15.657.013 15.245 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.999 3.999 0 110-7.998 3.999 3.999 0 010 7.998zm6.406-11.845a1.44 1.44 0 11-2.88 0 1.44 1.44 0 012.88 0z"
+                                        clip-rule="evenodd" />
+                                </svg>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="{{this.linkedinLink}}"
+                                class="text-[#0A66C2] hover:text-gray-900 dark:hover:text-white">
+                                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                                    <path fill-rule="evenodd"
+                                        d="M19.252 3C20.747 3 22 4.224 22 5.76V18.24C22 19.776 20.747 21 19.252 21H4.748C3.253 21 2 19.776 2 18.24V5.76C2 4.224 3.253 3 4.748 3h14.504zM7.052 9.167h-2.5V18h2.5V9.167zM5.802 8.163c-.858 0-1.547-.698-1.547-1.563 0-.864.689-1.563 1.547-1.563.859 0 1.548.698 1.548 1.563 0 .865-.689 1.563-1.548 1.563zm10.5 9.833h-2.5v-3.959c0-.99-.02-2.268-1.38-2.268-1.382 0-1.593 1.083-1.593 2.201v4.026h-2.5V9.167h2.4v1.205h.034c.334-.63 1.149-1.295 2.368-1.295 2.535 0 3.005 1.668 3.005 3.835V18h-.038z"
+                                        clip-rule="evenodd" />
+                                </svg>
+                            </a>
+                        </li>
+
+                    </ul>
+                </div>
+                {{/unless}}
                 {{/each}}
 
             </div>
@@ -410,6 +478,20 @@
 
         document.getElementById('closeMobileNav').addEventListener('click', function () {
             document.getElementById('mobileNav').classList.remove('active');
+        });
+
+         const fadeIns = document.querySelectorAll('.fade-in');
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible');
+                }
+            });
+        });
+
+        fadeIns.forEach(fadeIn => {
+            observer.observe(fadeIn);
         });
 
     </script>
